# AI-powered-Web-Crawler

./: .gitignore  readme..md
src/backend/: pyproject.toml
src/backend/alembic/: __init__.py  env.py
src/backend/alembic/versions/: .gitkeep  20241201_001_initial_schema.py
src/backend/app/: __init__.py  main.py
src/backend/app/api/: __init__.py  router.py
src/backend/app/api/endpoints/: __init__.py  crawl.py  dashboard.py  opportunities.py  sources.py
src/backend/app/core/: __init__.py  config.py  exceptions.py  logging.py
src/backend/app/db/: __init__.py  base.py  session.py
src/backend/app/models/: __init__.py  crawl_session.py  crawl_source.py  document.py  opportunity.py  prequalification.py
src/backend/app/schemas/: __init__.py  common.py  crawl_source.py  opportunity.py
src/backend/app/services/: __init__.py  local_crawler.py
src/backend/config/sources/: sample_government_portal.yaml
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/: ErrorBoundary.tsx
src/frontend/src/components/dashboard/: CrawlerStatus.tsx  OpportunitiesTable.tsx  StatsCards.tsx  index.ts
src/frontend/src/components/layout/: Layout.tsx  Sidebar.tsx  index.ts
src/frontend/src/contexts/: ThemeContext.tsx
src/frontend/src/pages/: Dashboard.tsx  RfpScanner.tsx  index.ts
src/frontend/src/services/: api.ts
src/frontend/src/types/: index.ts
src/functions/: host.json  requirements.txt
src/functions/rfp_crawler/: __init__.py  function.json
src/functions/shared/: __init__.py  ai_classifier.py  config.py  db_service.py  document_processor.py  models.py  page_crawler.py
